# cerebrum

./: .cvsignore  .gitignore  ADquickSync.py  ADsync.py  Account.py  CODEOWNERS  CONTRIBUTING.md  COPYING  ChangeLog  Constants.py  DOCKER-HOWTO.md  Database.py  Disk.py  DiskQuota.py  Dockerfile  Dockerfile-testsuite  Email.py  EmailLDAP.py  EntityExpire.py  Ephorte.py  Group.py  HACKING  INSTALL  INSTALL.md  Jenkinsfile  Jenkinsfile-dependencies-check  MANIFEST  MANIFEST.in  MailQ.py  Makefile  Makefile.in  OU.py  OrgLDIF.py  OrgLdif.py  PagaDataParser.py  Person.py  PosixExport.py  PosixLDIF.py  PosixUser.py  PrinterQuotas.py  (+127 more)
AutoStud/: ChangeLog  DiskTool.py  ProfileConfig.py  ProfileHandler.py  Select.py  StudentInfo.py  Util.py  __init__.py
Cerebrum/: Account.py  CLDatabase.py  Cache.py  ChangeLog.py  Constants.py  Database.py  DatabaseAccessor.py  Disk.py  Entity.py  Errors.py  FileCache.py  Group.py  Logging.py  Metainfo.py  OU.py  Person.py  Personer_antall.py  PosixUser.py  QuarantineHandler.py  RecursiveDict.py  SqlScanner.py  Utils.py  UtilsHelper.py  __init__.py  cereconf.py  default_config.py  https.py  meta.py
ClientAPI/: Entity.py  Group.py  core.py
RestAPI/: requirements.txt
SoapAPI/: SoapEntityAPI.py  SoapEntityAPImodel.py  SoapGroupAPI.py  SoapGroupAPImodel.py
_build/: genindex.html
adserver/: ADaccountDir.py  ADconstants.py  ADexchange.py  ADhomedir.py  ADobject.py  ADserver.py
client/: bofh.py  passweb.py  passweb_form.html  passweb_receipt.html
clients/: cweb.py  job-runner-cli.py  passweb_form.html  passweb_receipt.html
consumers/: consume-callback.py  consume-tasks.py  consumer_example.py  hr_import.py
contrib/: ADfullSync.py  ADutilMixIn.py  ad_full.py  ad_xml_export.py  adfgsync.py  adfusync.py  adquicksync.py  adsync.py  adutils.py  change-handler-manipulate.py  clean_invalid_bofh_auth_data.py  clean_password_history.py  consumer_example.py  copy_with_size_check.py  create-ougroups.py  create_flattened_group.py  db_clean.py  dump_usernames_by_aff.py  dump_usernames_passwords.py  export_quarantines.py  export_to_fronter_ws.py  file_clean.py  fix-double-pickle-change-params.py  fix-wtf-constants.py  generate_accounts.py  generate_cyrus_folders.py  generate_employee_dump.py  generate_event_list.py  generate_extid_name_dump.py  generate_groups_ldif.py  generate_invoice_stats.py  generate_ldif.py  generate_mail-ldif.py  generate_mail_dns_ldif.py  generate_mail_domains_ldif.py  generate_mail_ldif.py  generate_name_dictionary.py  generate_nismaps.py  generate_org_ldif.py  generate_pers_and_org_ldif.py  (+40 more)
debian/: README.Debian  ToDo  cerebrum-common.files  cerebrum-common.install  cerebrum-default  cerebrum-doc.docs  cerebrum-jbofh.install  cerebrum-server.config  cerebrum-server.dirs  cerebrum-server.files  cerebrum-server.init.d  cerebrum-server.install  cerebrum-server.postinst  cerebrum-server.postinstall  cerebrum-server.templates  cerebrum.1  cereconf.py.default  changelog  conffiles  control  copyright  cron.d.ex  debian_config.py.default  files  init.d  jbofh.sh  postinst  postrm  preinst  rules  scheduled_jobs.py
design/: Components.txt  account_tables.sql  adminprotocol.html  bofh_commands.txt  bofhd_auth.dia  bofhd_auth.sql  bofhd_tables.sql  cerebrum-core.dia  cerebrum-core.html  cereconf.py  cereweb_tables.sql  changelog.txt  code_value_tables.sql  core_data.sql  core_tables.sql  drop_core_tables.sql  drop_mod_email.sql  drop_mod_nis.sql  drop_mod_posix_user.sql  drop_mod_stedkode.sql  drop_oracle_grants.sql  entity_tables.sql  entity_usage.txt  fs_import_spec.txt  gro_auth.sql  group_tables.sql  iso_country_codes.txt  ldapconf.py  logging.ini  lt_import_spec.txt  migrate_to_0_9_10.sql  migrate_to_0_9_11.sql  migrate_to_0_9_12.sql  migrate_to_0_9_13.sql  migrate_to_0_9_14.sql  (+127 more)
doc/: Makefile  (+2 more)
(+3568 files in other folders)
